# ligne

./: Cargo.toml
.github/: release.yml  test.yml
.github/workflows/: release.yml  test.yml
docs/design/: internal-design.md
ligne/: Cargo.toml
ligne-core/: Cargo.toml
ligne-core/src/: lib.rs  ligne.rs
ligne-core/src/ligne/: core.rs
ligne-core/src/ligne/core/: Sprite-0001.aseprite  components.rs  controller.rs  convoy.rs  object.rs  types.rs  voxel.rs  world.rs
ligne-ui/: Cargo.toml
ligne-ui/src/: _main.rs  ecs.rs  main.rs
ligne-ui/src/ecs/: components.rs  systems.rs
ligne/src/: main.rs  simutrans_dat.rs
ligne/src/internal_structure/: convoy.rs  coord3d.rs  mod.rs  object.rs  train.rs  voxel.rs
