[package]
name = "ligne"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1", features = ["dynamic_linking", "bevy_core_pipeline"] }
bevy_ecs_tilemap = "0.11.0"
num = "0.4.3"
num-integer = "0.1.46"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[patch.crates-io]
# Tentative fix for the following issue. Remove once the fix is published to crates.io.
# https://github.com/StarArawn/bevy_ecs_tilemap/pull/449
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", rev = "cf2c7dc5e548da2a1187c2f08e470234a932ae08" }

[features]
default = ["render"]
render = []
